# osu-beatmap-parser

./: .clang-format  .gitignore  .gitmodules  .npmignore  .prebuildrc  .prettierrc  CMakeLists.txt  README.md  package.json  tsconfig.json
.github/workflows/: prebuild.yml  release.yml
examples/node/: index.ts
examples/wasm/: 2.osu  app.ts  index.html  server.ts
scripts/: build.js  build.ts  verify.ts
src/: index.ts  native.d.ts  types.ts  verify.ts
src/lib/: bindings.ts  wasm-wrapper.ts
src/native/: addon.cpp  addon.hpp  definitions.hpp  pool.hpp  wasm.cpp
src/native/osu/: audio.cpp  audio.hpp  definitions.hpp  parser.cpp  parser.hpp
src/types/: types.ts
